force-app/main/default/objects/Account/fields/AddressProvince__c.field-meta.xml
<CustomField>
    <fullName>AddressProvince__c</fullName>
    <label>Address Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>