force-app/main/default/objects/Account/fields/AppropriatenessQuestionnaireStatus__c.field-meta.xml
<CustomField>
    <fullName>AppropriatenessQuestionnaireStatus__c</fullName>
    <label>Appropriateness Questionnaire Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>ADMIN_REVIEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>