force-app/main/default/objects/Account/fields/Default_Account_Verification_Level__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_Verification_Level__c</fullName>
    <label>Default Account Verification Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified (0)</fullName>
            </value>
            <value>
                <fullName>Verified with restrictions (1)</fullName>
            </value>
            <value>
                <fullName>Verified (2)</fullName>
            </value>
            <value>
                <fullName>Liquidation Only (4)</fullName>
            </value>
            <value>
                <fullName>Professional (5)</fullName>
            </value>
            <value>
                <fullName>Politically Exposed Person (6)</fullName>
            </value>
            <value>
                <fullName>Market Makers (7)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>