force-app/main/default/objects/Account/fields/Email_Verified_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified_Status__c</fullName>
    <label>Email Verified Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Unverified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>