force-app/main/default/objects/Account/fields/EmailConfirmed__c.field-meta.xml
<CustomField>
    <fullName>EmailConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailConfirmed</label>
    <type>Checkbox</type>
</CustomField>