force-app/main/default/objects/Account/fields/IDStatus__c.field-meta.xml
<CustomField>
    <fullName>IDStatus__c</fullName>
    <label>ID Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FINAL_REJECTION</fullName>
            </value>
            <value>
                <fullName>PROCESSING</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>