force-app/main/default/objects/Account/fields/Last_Login_Action__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Action__c</fullName>
    <label>Last Login Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>