force-app/main/default/objects/Account/fields/LastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>LastLoginDate__c</fullName>
    <label>Last Login Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>