force-app/main/default/objects/Account/fields/LastLoginIP__c.field-meta.xml
<CustomField>
    <fullName>LastLoginIP__c</fullName>
    <label>Last Login IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>