force-app/main/default/objects/Account/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <externalId>true</externalId>
    <label>User ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>