force-app/main/default/objects/Account/fields/MfaStatus__c.field-meta.xml
<CustomField>
    <fullName>MfaStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MFA Status</label>
    <type>Checkbox</type>
</CustomField>