force-app/main/default/objects/Account/fields/Most_Recent_Withdrawal_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Withdrawal_Ticket__c</fullName>
    <description>The Ticket # of the most recent withdrawal transaction</description>
    <label>Most Recent Withdrawal Ticket #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>