force-app/main/default/objects/Account/fields/StakingQuestionnaireStatus__c.field-meta.xml
<CustomField>
    <fullName>StakingQuestionnaireStatus__c</fullName>
    <label>Staking Questionnaire Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>ADMIN_REVIEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>