force-app/main/default/objects/Account/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <externalId>true</externalId>
    <label>User ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>