force-app/main/default/objects/Account/fields/VerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>VerificationStatus__c</fullName>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>PROCESSING</fullName>
            </value>
            <value>
                <fullName>VERIFIED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>